🐛 bugfix: font visibility fix

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Hubot Sans';
-  src:
-    url('Hubot-Sans.woff2') format('woff2 supports variations'),
-    url('Hubot-Sans.woff2') format('woff2-variations');
+  src: url('Hubot-Sans.ttf');
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
@@ -34,11 +32,11 @@ h1 {
   line-height: 0.9;
   font-weight: 900;
   font-stretch: 125%;
-  font-family: 'Hubot Sans';
+  font-family: 'Hubot Sans', sans-serif;
 }
 
 h2 {
-  font-family: 'Hubot Sans';
+  font-family: 'Hubot Sans', sans-serif;
   font-weight: 900;
 }
 
